--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Computer Application</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>DSA, OOPs Concepts, networking, Microsoft Office, Git, Photoshop &amp; CoralDraw</span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Learning new technologies  </span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Learning new technologies , </span></li>
 									
 								</ul>
 							</div>
@@ -293,7 +293,7 @@
 									<span class="number" data-number="5">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="Shoaib Malik Resume.pdf" Download class="btn btn-primary py-3 px-3">Download Resume</a></p>
+								<!-- <p><a href="Shoaib Malik Resume.pdf" Download class="btn btn-primary py-3 px-3">Download Resume</a></p> -->
 							</div>
 						</div>
 					</div>
@@ -311,7 +311,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>With the strong foundation in programming language like C, C++, Java, and technical concepts like DSA, OOPs, and networking. I am a keen learner adn possesses soft skills such as multitasing and adaptability</p>
+            <p>With the strong foundation in programming language like C, C++, Java, and technical concepts like DSA, OOPs, and networking. I am a keen learner adn possesses soft skills such as multitasing and adaptability</p><br><p><a href="Shoaib Malik Resume.pdf" Download class="btn btn-primary py-3 px-3">Download Resume</a></p>
           </div>
         </div>
 
