--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/about.yellowhite.png" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/about.blackwhite.png" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
@@ -280,7 +280,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Computer Application</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>DSA, OOPs Concepts, networking, Microsoft Office, Git, Photoshop &amp; CoralDraw</span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Learning new technologies , </span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Learning new technologies  </span></li>
 									
 								</ul>
 							</div>
@@ -311,7 +311,8 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>With the strong foundation in programming language like C, C++, Java, and technical concepts like DSA, OOPs, and networking. I am a keen learner adn possesses soft skills such as multitasing and adaptability</p><br><p><a href="Shoaib Malik Resume.pdf" Download class="btn btn-primary py-3 px-3">Download Resume</a></p>
+            <p>With the strong foundation in programming language like C, C++, Java, and technical concepts like DSA, OOPs, and networking. I am a keen learner adn possesses soft skills such as multitasing and adaptability</p><br>
+			<p><a href="Shoaib Malik Resume.pdf" Download class="btn btn-primary py-3 px-3">Download Resume</a></p>
           </div>
         </div>
 
