ADD NEW HIRE ME BUTTON AND REARRANGE THEM

--- a/index.html
+++ b/index.html
@@ -147,8 +147,9 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Shoaib Malik</span></h1>
-
+			            <h1 class="mb-4 mt-3">I'm <span>Shoaib Malik <h4>A passionate BCA graduate. I love building user-friendly websites and learning new technologies every day.</h4></span></h1>
+						<h6>📍 Based in Delhi | 💻 Open to Work |🚀 MERN Stack Enthusiast</h6>
+						<br
 						<!-- Element to contain animated typing -->
 						<span id="typing-animation"></span>
 
@@ -186,8 +187,10 @@
 						
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/shoaib-malik-697531253" class="btn btn-primary py-3 px-4">LinkedIn</a> 
-							<a href="https://github.com/ShoaibMalik10205" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="tel://8826436647" class="btn btn-primary py-3 px-4">HIRE ME</a> 
+							<a href="https://github.com/ShoaibMalik10205" class="btn btn-white btn-outline-white py-3 px-4">MY WORK</a> 
+						<a href="https://www.linkedin.com/in/shoaib-malik-697531253" class="btn btn-primary py-3 px-4">LinkedIn</a> 
+						</p>
 		            </div>
 		          </div>
 	        	</div>
@@ -333,7 +336,7 @@
 						<span class="date">2024</span>
 						<h2>Web Developer Intern</h2>
 						<span class="position">Zidio Developement</span>
-						<p class="mt-4">Zidio Developement, is a trailblazing software development company whre inovation meets expertise. 
+						<p class="mt-4">Zidio Developement, is a trailblazing software development company where innovation meets expertise. 
 							<ul>
 								<li>learn mern technologies, work on web projects. </li>
 								<li>Developed Resume Builder web application with mern technologies, got project performance of 92%.</li>
@@ -445,7 +448,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/ShoaibMalik10205/amazon-clone">Amazon Clone Project for Beginners</a></h3>
-                <p>Recrafted amazon website from scratch using HTML & CSS. While it's not yet responsive, it's for my dedictaion and passion for web development.</p>
+                <p>Recrafted amazon website from scratch using HTML & CSS. While it's not yet responsive, it's for my dedication and passion for web development.</p>
               </div>
             </div>
           </div>
