update new project link

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <div class="row d-flex">
 			<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="" class="block-20 zoom-effect" style="background-image: url('images/csy.png');">
+              <a href="https://github.com/ShoaibMalik10205/Cheating-Surveillance-System" class="block-20 zoom-effect" style="background-image: url('images/csy.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
